unpackaged/objects/SessaoCaixa__c.object
<CustomObject>
    <fields>
        <fullName>DataFechamento__c</fullName>
        <label>Data Fechamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Observacoes__c</fullName>
        <label>Observações</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberta</fullName>
                    <default>true</default>
                    <label>Aberta</label>
                </value>
                <value>
                    <fullName>Fechada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalFichaFaltando__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Ficha Faltando (=)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalFichasCapile__c</fullName>
        <label>Total Fichas Capilé (+)</label>
        <summarizedField>DealerSessao__c.ValorTotalCapile__c</summarizedField>
        <summaryForeignKey>DealerSessao__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichasComprada__c</fullName>
        <label>Total Fichas Comprada (-)</label>
        <summarizedField>SessaoCash__c.TotalFichas__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichasDevolvidas__c</fullName>
        <label>Total Fichas Devolvidas (+)</label>
        <summarizedField>SessaoCash__c.FichaDevolvida__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichasRake__c</fullName>
        <label>Total Fichas Rake (+)</label>
        <summarizedField>Mesa__c.ValorRake__c</summarizedField>
        <summaryFilterItems>
            <field>Mesa__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryForeignKey>Mesa__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorFundo__c</fullName>
        <label>Valor Fundo</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorPendentePagoCartaoCredito__c</fullName>
        <label>Valor Pendente Pago/Cartão Crédito</label>
        <summarizedField>SessaoCash__c.ValorTotalPendente__c</summarizedField>
        <summaryFilterItems>
            <field>SessaoCash__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Crédito</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.ValorTotal__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorPendentePagoCartaoDebito__c</fullName>
        <label>Valor Pendente Pago/Cartão Débito</label>
        <summarizedField>SessaoCash__c.ValorTotalPendente__c</summarizedField>
        <summaryFilterItems>
            <field>SessaoCash__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Débito</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.ValorTotal__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorPendentePagoDinheiro__c</fullName>
        <label>Valor Pendente Pago/Dinheiro</label>
        <summarizedField>SessaoCash__c.ValorTotalPendente__c</summarizedField>
        <summaryFilterItems>
            <field>SessaoCash__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Dinheiro</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.ValorTotal__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorPendentePago__c</fullName>
        <label>Valor Pendente Pago (+)</label>
        <summarizedField>SessaoCash__c.ValorTotalPendente__c</summarizedField>
        <summaryFilterItems>
            <field>SessaoCash__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Dinheiro, Cartão/Débito, Cartão/Crédito</value>
        </summaryFilterItems>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorPendente__c</fullName>
        <label>Valor Pendente (-)</label>
        <summarizedField>SessaoCash__c.ValorTotalPendente__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalCartaoCredito__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total/Cartão Crédito (+)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorTotalCartaoDebito__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total/Cartão Débito (+)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorTotalDinheiro__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total/Dinheiro (+)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorTotalEntradaCartaoCredito__c</fullName>
        <label>Valor Total Entrada/Cartão Crédito</label>
        <summarizedField>SessaoCash__c.TotalPagoCartaoCredito__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalEntradaCartaoDebito__c</fullName>
        <label>Valor Total Entrada/Cartão Débito</label>
        <summarizedField>SessaoCash__c.TotalPagoCartaoDebito__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalEntradaDinheiro__c</fullName>
        <label>Valor Total Entrada/Dinheiro</label>
        <summarizedField>SessaoCash__c.TotalPagoDinheiro__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalEntrada__c</fullName>
        <label>Valor Total Entrada</label>
        <summarizedField>SessaoCash__c.ValorTotalPago__c</summarizedField>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotalEspecie__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total Espécie (+)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorTotalSacado__c</fullName>
        <label>Valor Total Sacado (-)</label>
        <summarizedField>SessaoCash__c.ValorTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SessaoCash__c.Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SessaoCash__c.ValorTotal__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SessaoCash__c.SessaoCaixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sessão Caixa</label>
    <listViews>
        <fullName>PosicaoCaixa_Faturamento</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ValorTotalEspecie__c</columns>
        <columns>ValorTotalCartaoDebito__c</columns>
        <columns>ValorTotalCartaoCredito__c</columns>
        <columns>ValorTotalSacado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </filters>
        <label>Fechamento Caixa</label>
        <sharedTo>
            <group>ForceCash</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PosicaoCaixa_Fichas</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TotalFichasComprada__c</columns>
        <columns>TotalFichasDevolvidas__c</columns>
        <columns>TotalFichaFaltando__c</columns>
        <columns>TotalFichasCapile__c</columns>
        <columns>TotalFichasRake__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </filters>
        <label>Posição Caixa - Fichas</label>
        <sharedTo>
            <group>ForceCash</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PosicaoCaixa_VendaDireta</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ValorTotalEntradaDinheiro__c</columns>
        <columns>ValorTotalEntradaCartaoDebito__c</columns>
        <columns>ValorTotalEntradaCartaoCredito__c</columns>
        <columns>ValorTotalEntrada__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </filters>
        <label>Posição Caixa - Venda Direta</label>
        <sharedTo>
            <group>ForceCash</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PosicaoCaixa_VendaPendente</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ValorPendente__c</columns>
        <columns>ValorPendentePago__c</columns>
        <columns>ValorPendentePagoDinheiro__c</columns>
        <columns>ValorPendentePagoCartaoDebito__c</columns>
        <columns>ValorPendentePagoCartaoCredito__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </filters>
        <label>Posição Caixa - Venda Pendente</label>
        <sharedTo>
            <group>ForceCash</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stars_Clube_Poker_SessaoCaixa</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DataFechamento__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Stars Clube Poker</label>
        <queue>Stars_Clube_Poker</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessões Caixa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>